--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   release:
     # runs-on: self-hosted
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -30,12 +30,14 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to AliyunCS
-        uses: docker/login-action@v1
-        with:
-          registry: registry.cn-beijing.aliyuncs.com
-          username: ${{ secrets.ALI_USER  }}
-          password: ${{ secrets.ALI_PASSWORD  }}
+      # - name: Login to AliyunCS
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: registry.cn-beijing.aliyuncs.com
+      #     username: ${{ secrets.ALI_USER  }}
+      #     password: ${{ secrets.ALI_PASSWORD  }}
+      # "registry.cn-beijing.aliyuncs.com/mereith/van-blog:latest"
+      # "registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -54,8 +56,6 @@ jobs:
           tags: |
             "docker.io/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
             "docker.io/mereith/van-blog:latest"
-            "registry.cn-beijing.aliyuncs.com/mereith/van-blog:latest"
-            "registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
       - name: Release
         uses: softprops/action-gh-release@v1
       - name: updateVersionToApiServer
