--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,16 +9,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^12.3.4",
+    "@next/bundle-analyzer": "^13.2.4",
     "@types/lodash": "^4.14.191",
     "@types/markdown-navbar": "^1.4.0",
     "@waline/client": "^2.14.8",
     "dayjs": "^1.11.7",
-    "eslint-config-next": "^13.2.3",
+    "eslint-config-next": "^13.2.4",
     "headroom.js": "^0.12.0",
     "js-base64": "^3.7.5",
+    "katex": "^0.16.4",
+    "lodash": "^4.17.21",
     "mermaid": "^10.0.2",
-    "next": "^13.2.3",
+    "next": "^13.2.4",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-copy-to-clipboard": "^5.1.0",
@@ -37,26 +39,26 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-rehype": "^10.1.0",
-    "sharp": "^0.30.7"
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.38",
+    "@swc/core": "^1.3.40",
     "@swc/jest": "^0.2.24",
     "@types/hast": "^2.3.4",
     "@types/headroom.js": "^0.12.2",
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
     "@types/react-burger-menu": "^2.8.3",
-    "@types/react-copy-to-clipboard": "^5.0.3",
-    "@types/react-dom": "18.0.5",
-    "@types/react-headroom": "^2.2.2",
-    "@types/react-scroll": "^1.8.3",
-    "@types/react-syntax-highlighter": "^15.5.3",
-    "autoprefixer": "^10.4.7",
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-dom": "18.0.11",
+    "@types/react-headroom": "^3.2.0",
+    "@types/react-scroll": "^1.8.6",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5",
     "vitest": "0.29.2"
   }
 }
