--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,13 +13,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          # 如果你文档需要 Git 子模块，取消注释下一行
-          # submodules: true
+
       - name: Get version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-      - name: 展示版本
+
+      - name: Display version
         run: echo ${{ steps.get_version.outputs.VERSION }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -27,27 +28,29 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          run_install: true
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 设置 Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm install --global pnpm@7.27.1
-      - name: 安装依赖
-        run: pnpm install
-
-      - name: 构建文档
+      - name: Build docs
         env:
           NODE_OPTIONS: --max_old_space_size=4096
         run: |-
           pnpm docs:build
           > docs/.vuepress/dist/.nojekyll
-        id: image-name
+
       - name: 打包镜像并推送
         uses: docker/build-push-action@v2
         with:
@@ -57,13 +60,16 @@ jobs:
           push: true
           tags: |
             "docker.io/mereith/van-blog-website:${{ steps.get_version.outputs.VERSION }}"
+
       - name: 部署到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
           command: set image  deployment/vanblog-doc vanblog-doc=docker.io/mereith/van-blog-website:${{ steps.get_version.outputs.VERSION }}
+
       - name: 等待部署生效
         run: sleep 300
+
       - name: 刷新 CDN 缓存
         run: |-
           curl -X POST -H "Content-Type: application/json" --header 'token: ${{ secrets.CDN_REFLASH_SECRET }}'  -d '{"url":"https://vanblog.mereith.com/"}'  ${{ secrets.CDN_REFLASH_URL }}
