--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "clean": "rm -rf node_modules && rm -rf packages/*/node_modules && rm -rf packages/*/dist",
     "build:test": "act -j test --secret-file=.env",
-    "build": "lerna run build --scope=@vanblog/server --scope=@vanblog/theme-default --scope=@vanblog/admin --parallel",
-    "build:server": "lerna run build --scope=@vanblog/server",
-    "build:website": "lerna run build --scope=@vanblog/theme-default",
-    "build:admin": "lerna run build --scope=@vanblog/admin",
-    "dev": "lerna run dev --scope @vanblog/server --scope @vanblog/admin --parallel",
+    "build": "pnpm --filter @vanblog/server --filter @vanblog/theme-default --filter @vanblog/admin -r --parallel build",
+    "build:admin": "pnpm --filter @vanblog/admin build",
+    "build:server": "pnpm --filter @vanblog/server build",
+    "build:website": "pnpm --filter @vanblog/theme-default build",
+    "dev": "pnpm --filter @vanblog/server --filter @vanblog/admin -r --parallel dev",
     "dev:server": "lerna run dev:noweb --scope @vanblog/server",
     "dev:website": "lerna run dev --scope @vanblog/theme-default",
     "dev:admin": "lerna run dev --scope @vanblog/admin",
@@ -28,37 +28,18 @@
     "sync-aliyun": "bash scripts/sync-aliyuncs.sh",
     "webhook": "node scripts/webhook.js"
   },
+  "packageManager": "pnpm@8.5.1",
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.61",
-    "@vuepress/utils": "2.0.0-beta.61",
-    "lerna": "^6.5.1",
+    "@vuepress/client": "2.0.0-beta.62",
+    "@vuepress/utils": "2.0.0-beta.62",
+    "cross-env": "^7.0.3",
+    "lerna": "^6.6.2",
     "nan": "^2.17.0",
     "standard-version": "^9.5.0",
-    "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.61",
-    "vuepress-plugin-auto-catalog": "2.0.0-beta.191",
-    "vuepress-plugin-blog2": "2.0.0-beta.191",
-    "vuepress-plugin-comment2": "2.0.0-beta.191",
-    "vuepress-plugin-components": "2.0.0-beta.191",
-    "vuepress-plugin-copy-code2": "2.0.0-beta.191",
-    "vuepress-plugin-copyright2": "2.0.0-beta.191",
-    "vuepress-plugin-feed2": "2.0.0-beta.191",
-    "vuepress-plugin-md-enhance": "2.0.0-beta.191",
-    "vuepress-plugin-photo-swipe": "2.0.0-beta.191",
-    "vuepress-plugin-pwa2": "2.0.0-beta.191",
-    "vuepress-plugin-reading-time2": "2.0.0-beta.191",
-    "vuepress-plugin-redirect": "2.0.0-beta.185",
-    "vuepress-plugin-rtl": "2.0.0-beta.191",
-    "vuepress-plugin-search-pro": "2.0.0-beta.185",
-    "vuepress-plugin-seo2": "2.0.0-beta.191",
-    "vuepress-plugin-sitemap2": "2.0.0-beta.191",
-    "vuepress-theme-hope": "2.0.0-beta.185"
-  },
-  "dependencies": {
-    "@vuepress/core": "^1.9.9",
-    "@vuepress/shared-utils": "^1.9.9",
-    "cross-env": "^7.0.3",
-    "vuepress-plugin-sass-palette": "2.0.0-beta.191",
-    "vuepress-shared": "2.0.0-beta.191"
+    "vue": "^3.3.2",
+    "vuepress": "2.0.0-beta.62",
+    "vuepress-plugin-redirect": "2.0.0-beta.211",
+    "vuepress-plugin-search-pro": "2.0.0-beta.211",
+    "vuepress-theme-hope": "2.0.0-beta.211"
   }
 }
